# ForkLift_AMR

./: launch_urdf_into_gazebo.launch.py
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/ackermann_steering_controller/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/combined_robot_hw/: .catkin
devel/.private/combined_robot_hw_tests/: .catkin  .rosinstall  local_setup.sh
devel/.private/controller_interface/: .catkin
devel/.private/controller_manager/: .catkin  (+1 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/doozy_forklift/share/doozy_forklift/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/doozy_forklift/share/doozy_forklift/launch/: forklift_gazebo.launch.py
launch/: forkbot_01.launch.py
log/: latest_build  latest_list
map/: dqn_1.pgm  dqn_1.yaml
noetic_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
rviz/: config_01.rviz  dock_test_config_01.rviz
src/doozy_forklift/: setup.cfg  setup.py
src/forkassembly_bot/: package.xml
src/forklift_bot/: CMakeLists.txt
src/forklift_interfaces/: CMakeLists.txt
src/test2_bot/: CMakeLists.txt  package.xml
src/test_scripts/: imu_test_1.py
src/testfork_bot/: CMakeLists.txt  package.xml
src/trial3_fork/: CMakeLists.txt  package.xml
world/: tb3_test_world.world
(+1109 files in other folders)
