<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doozy_forklift</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="avinaash.mani@gmail.com">avinaash</maintainer>
  <license>TODO: License declaration</license>

  <depend>example_interfaces</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
